--- a/Styles/StylesLogin.css
+++ b/Styles/StylesLogin.css
@@ -3,6 +3,11 @@
     padding: 0;
     font-family: 'Raleway', sans-serif;
 }
+body{
+    width: 100vw;
+    height: 100vh;
+    background-color: #90E0EF;
+}
 .login-screen{
     width: 100vw;
     height: 100vh;
@@ -70,4 +75,10 @@
     align-items: center;
     justify-content: center;
     color: #ffffff;
+}
+@media(max-width: 500px){
+    .login-container{
+        width: 350px;
+        height: 400px;
+    }
 }
