--- a/Styles/StylesLogin.css
+++ b/Styles/StylesLogin.css
@@ -20,6 +20,7 @@ body{
 .users{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: flex-start;
 }
@@ -78,7 +79,20 @@ body{
 }
 @media(max-width: 500px){
     .login-container{
-        width: 350px;
-        height: 400px;
+        width: 200px;
+        height: 350px;
+    }
+    .users{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+    .login{
+        width: 200px;
+    }
+    .login-inputs{
+        margin: 20px;
     }
 }
